classDiagram
    BaseController <|-- SpecificController
    BaseModel <|-- SpecificModel
    
    class BaseController {
        +verifyBody(params)
        +verifyRightToModify(request, entityId, Model)
        +getCurrentUser(request)
        +isToken(request)
        +decodeToken(token)
    }

    class SpecificController {
        +addEntity(request, res)
        +readEntity(request, res)
        +updateEntity(request, res)
        +deleteEntity(request, res)
        +readAllEntities(request, res)
    }

    class BaseModel {
        -collectionName : string
        +create(data)
        +read(criteria, value, isFindOne)
        +update(id, updateData)
        +delete(id)
    }

    class SpecificModel {
        +create(data)
        +read(criteria, value, isFindOne)
        +update(id, updateData)
        +delete(id)
    }

    class UserModel {
        +verifyClient(token)
        +decodeToken(token)
        +getUserById(userId)
    }

    class Database {
        +performDatabaseOperation()
    }
    
    SpecificController --|> BaseController
    SpecificModel --|> BaseModel
    SpecificController -- UserModel
    SpecificModel -- Database
    BaseModel -- Database
    UserModel -- Database
